Kubernetes-Course/kubernetes-course-manifests/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-test-lb-1582790708.us-east-2.elb.amazonaws.com
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: nginx-service
              port:
                number: 8080
